Closed Bug 1340835 Opened 9 years ago Closed 9 years ago

uninitialized variables in nsMsgSearchValidityTable::ValidateTerms

Categories

(MailNews Core :: Search, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 54.0

People

(Reporter: aceman, Assigned: aceman)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Gcc 5 thinks some variables in nsMsgSearchValidityTable::ValidateTerms() may be used uninitialized: mailnews/base/search/src/nsMsgSearchAdapter.cpp: In member function ‘virtual nsresult nsMsgSearchValidityTable::ValidateTerms(nsIArray*)’: mailnews/base/search/src/nsMsgSearchAdapter.cpp:840:18: warning: ‘enabled’ may be used uninitialized in this function [-Wmaybe-uninitialized] if (!enabled || !available) ^ mailnews/base/search/src/nsMsgSearchAdapter.cpp:840:18: warning: ‘available’ may be used uninitialized in this function [-Wmaybe-uninitialized] mailnews/base/search/src/nsMsgSearchAdapter.cpp:845:13: warning: ‘validNotShown’ may be used uninitialized in this function [-Wmaybe-uninitialized] if (!validNotShown) ^ Some of the last compile warnings in mailnews. May hit us in the future when all warnings become errors.
Attached patch patchSplinter Review
Attachment #8838896 - Flags: review?(rkent)
Comment on attachment 8838896 [details] [diff] [review] patch Review of attachment 8838896 [details] [diff] [review]: ----------------------------------------------------------------- LGTM
Attachment #8838896 - Flags: review?(rkent) → review+
Thanks.
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 54.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: