Bug 1340835 - fix uninitialized variables in nsMsgSearchValidityTable::ValidateTerms. r=rkent